--- a/medp341-midterm/app/dev/css/style.css
+++ b/medp341-midterm/app/dev/css/style.css
@@ -74,6 +74,11 @@ video {
   margin-right: auto;
   display: block
 }
+audio {
+  margin-left: auto;
+  margin-right: auto;
+  display: block
+}
 
 #credits {
   text-align: center;
@@ -102,6 +107,8 @@ video {
     display:inline-block;
     padding:20px;
     text-decoration:none;
+    color: #2E86C1;
+    font-weight: 600;
 }
 
 .explanation{
